--- a/package.json
+++ b/package.json
@@ -18,17 +18,14 @@
     "@react-pdf/renderer": "^3.1.12",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
-    "deepcrypt": "^2.0.4",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^8.4.7",
     "moment": "^2.29.4",
     "next": "13.1.1",
-    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-qr-code": "^2.0.11",
     "react-svg": "^16.1.16",
+    "read-excel-file": "^5.6.1",
     "sharp": "^0.31.3"
   }
 }
